--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "angular-bootstrap": "~0.12.1",
     "angularjs": "~1.3.15"
+  },
+  "devDependencies": {
+    "bootstrap": "~3.3.4"
   }
 }
