--- a/yadaApp/bower.json
+++ b/yadaApp/bower.json
@@ -16,7 +16,8 @@
     "angularjs": "~1.3.15"
   },
   "devDependencies": {
-    "bootstrap": "~3.3.4"
+    "bootstrap": "~3.3.4",
+    "angular-animate": "~1.3.15"
   },
   "resolutions": {
     "angular": "1.3.15"
