--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "body-parser": "^1.12.3",
     "mocha": "^2.2.4",
     "sinon": "^1.14.1"
   },
