--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "sinon": "^1.14.1"
   },
   "dependencies": {
+    "body-parser": "^1.12.3",
     "express": "^4.12.3",
     "moment": "^2.10.2",
+    "nconf": "^0.7.1",
     "pg": "^4.3.0",
     "underscore": "^1.8.3"
   }
