--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "yadaguru-api",
-  "version": "1.0.0",
-  "description": "REST api for yadaguru app",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
+  "name": "yadaguru",
+  "version": "0.2.0",
+  "description": "HTTP backend for yadaguru app",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/yadaguru/yadaguru-app.git"
   },
+  "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "npm run test-node && npm run test-browser",
+    "test-node": "mocha -R spec ./test/node/index.js",
+    "test-browser": "mocha-phantomjs ./test/browser/index.html"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "body-parser": "^1.12.3",
+    "browser-sync": "^2.7.1",
+    "gulp-env": "^0.2.0",
+    "gulp-minify-css": "^1.1.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-util": "^3.0.4",
     "mocha": "^2.2.4",
+    "should": "^6.0.1",
     "sinon": "^1.14.1"
   },
   "dependencies": {
     "body-parser": "^1.12.3",
     "express": "^4.12.3",
-    "moment": "^2.10.2",
-    "nconf": "^0.7.1",
-    "pg": "^4.3.0",
-    "underscore": "^1.8.3"
+    "mongoose": "4.0.2"
   }
 }
