--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "browser-sync": "^2.7.1",
     "gulp-env": "^0.2.0",
     "gulp-minify-css": "^1.1.1",
+    "gulp-mocha": "^2.0.1",
+    "gulp-nodemon": "^2.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.4",
     "mocha": "^2.2.4",
     "should": "^6.0.1",
-    "sinon": "^1.14.1"
+    "sinon": "^1.14.1",
+    "supertest": "^1.0.1"
   },
   "dependencies": {
     "body-parser": "^1.12.3",
