--- a/yadaApp/bower.json
+++ b/yadaApp/bower.json
@@ -13,13 +13,14 @@
   ],
   "dependencies": {
     "angular-bootstrap": "~0.12.1",
-    "angularjs": "~1.3.15"
+    "angularjs": "~1.3.15",
+    "angular-route": "~1.4.0"
   },
   "devDependencies": {
     "bootstrap": "~3.3.4",
     "angular-animate": "~1.3.15"
   },
   "resolutions": {
-    "angular": "1.3.15"
+    "angular": "1.4.0"
   }
 }
