--- a/package.json
+++ b/package.json
@@ -16,22 +16,43 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.7.1",
+    "del": "^1.2.0",
     "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-env": "^0.2.0",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-inject": "^1.2.0",
+    "gulp-jscs": "^1.6.0",
+    "gulp-jshint": "^1.11.0",
+    "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.1.1",
+    "gulp-minify-html": "^1.0.3",
     "gulp-mocha": "^2.0.1",
     "gulp-nodemon": "^2.0.3",
+    "gulp-plumber": "^1.0.1",
+    "gulp-print": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-util": "^3.0.4",
+    "gulp-task-listing": "^1.0.0",
+    "gulp-util": "^3.0.5",
+    "jshint-stylish": "^2.0.0",
     "mocha": "^2.2.4",
     "node-mongo-seeds": "^2.2.4",
     "should": "^6.0.1",
     "sinon": "^1.14.1",
-    "supertest": "^1.0.1"
+    "supertest": "^1.0.1",
+    "wiredep": "^2.2.2",
+    "yargs": "^3.10.0"
   },
   "dependencies": {
     "body-parser": "^1.12.3",
+    "compression": "^1.4.4",
     "express": "^4.12.3",
-    "mongoose": "4.0.2"
+    "method-override": "^2.3.3",
+    "mongoose": "4.0.2",
+    "morgan": "^1.5.3",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "^2.2.1"
   }
 }
