--- a/bower.json
+++ b/bower.json
@@ -13,11 +13,11 @@
   ],
   "dependencies": {
     "angular-bootstrap": "~0.12.1",
-    "angularjs": "~1.3.15"
-  },
-  "devDependencies": {
+    "angularjs": "~1.3.15",    
     "bootstrap": "~3.3.4",
     "angular-animate": "~1.3.15"
+  },
+  "devDependencies": {
   },
   "resolutions": {
     "angular": "1.3.15"
