--- a/bower.json
+++ b/bower.json
@@ -12,14 +12,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular-bootstrap": "~0.12.1",
-    "angularjs": "~1.3.15",    
+    "angular-bootstrap": "~0.13.0",
+    "angular": "~1.3.15",
     "bootstrap": "~3.3.4",
     "angular-animate": "~1.3.15"
-  },
-  "devDependencies": {
-  },
-  "resolutions": {
-    "angular": "1.3.15"
   }
 }
