--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
   "dependencies": {
     "body-parser": "^1.12.3",
     "compression": "^1.4.4",
+    "cookie-parser": "^1.3.5",
     "express": "^4.12.3",
+    "express-session": "^1.11.2",
     "method-override": "^2.3.3",
     "mongoose": "4.0.2",
     "morgan": "^1.5.3",
