--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "angular-bootstrap": "~0.13.0",
     "angular": "~1.3.15",
     "bootstrap": "~3.3.4",
-    "angular-animate": "~1.3.15"
+    "angular-animate": "~1.3.15",
+    "font-awesome": "~4.3.0"
   }
 }
