--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "angular-bootstrap": "~0.13.0",
     "angular": "~1.3.15",
-    "angular-route": "~1.4.0"
+    "angular-route": "~1.4.0",
     "bootstrap": "~3.3.4",
     "angular-animate": "~1.3.15",
     "font-awesome": "~4.3.0"
