--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular-route": "~1.4.0",
     "bootstrap": "~3.3.4",
     "angular-animate": "~1.3.15",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "angular-ui-router": "~0.2.15"
   }
 }
