--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,14 @@
     "angular": "~1.3.15",
     "bootstrap": "~3.3.4",
     "angular-animate": "~1.3.15",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "toastr": "~2.1.1",
+    "angular-toastr": "~1.4.1",
+    "angular-resource": "~1.4.1"
+  },
+  "overrides": {
+    "bootstrap": {
+      "main": "dist/css/bootstrap.css"
+    }
   }
 }
