Adds custom seed.js

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jshint-stylish": "^2.0.0",
     "mocha": "^2.2.4",
     "node-mongo-seeds": "^2.2.4",
+    "prompt": "^0.2.14",
     "should": "^6.0.1",
     "sinon": "^1.14.1",
     "supertest": "^1.0.1",
