--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "bootstrap": "~3.3.4",
     "angular-animate": "~1.3.15",
     "font-awesome": "~4.3.0",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
     "toastr": "~2.1.1",
     "angular-toastr": "~1.4.1",
     "angular-resource": "~1.4.1"
