--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "font-awesome": "~4.3.0",
     "toastr": "~2.1.1",
     "angular-toastr": "~1.4.1",
-    "angular-resource": "~1.4.1"
+    "angular-resource": "~1.4.1",
+    "modernizr": "~2.8.3"
   },
   "overrides": {
     "bootstrap": {
