--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "gulp-plumber": "^1.0.1",
     "gulp-print": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.3",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-task-listing": "^1.0.0",
     "gulp-util": "^3.0.5",
     "jshint-stylish": "^2.0.0",
