--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "toastr": "~2.1.1",
     "angular-toastr": "~1.4.1",
     "angular-resource": "~1.4.1",
-    "modernizr": "~2.8.3"
+    "modernizr": "~2.8.3",
+    "textAngular": "~1.4.2"
   },
   "overrides": {
     "bootstrap": {
