Adds categoryController post unit test

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "main": "./server/server.js",
   "scripts": {
-    "test": "npm run test-node && npm run test-browser",
-    "test-node": "mocha -R spec ./test/node/index.js",
+    "test": "npm run test-node",
+    "test-node": "node node_modules/mocha/bin/mocha",
     "test-browser": "mocha-phantomjs ./test/browser/index.html",
     "start": "node ./server/server.js"
   },
@@ -39,12 +39,12 @@
     "gulp-task-listing": "^1.0.0",
     "gulp-util": "^3.0.5",
     "jshint-stylish": "^2.0.0",
-    "mocha": "^2.2.4",
+    "mocha": "^2.2.5",
     "node-mongo-seeds": "^2.2.4",
     "prompt": "^0.2.14",
     "require-dir": "^0.3.0",
-    "should": "^6.0.1",
-    "sinon": "^1.14.1",
+    "should": "^7.0.2",
+    "sinon": "^1.15.4",
     "supertest": "^1.0.1",
     "wiredep": "^2.2.2",
     "yargs": "^3.10.0"
@@ -56,6 +56,7 @@
     "express": "^4.12.3",
     "express-session": "^1.11.2",
     "method-override": "^2.3.3",
+    "moment": "^2.10.3",
     "mongoose": "4.0.2",
     "morgan": "^1.5.3",
     "passport": "^0.2.2",
