--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,5 @@ before_install:
   - sudo apt-get install -qq
 install:
   - npm install
+script: "npm run-script test-travis"
+after_script: "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
