--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.7.1",
+    "coveralls": "^2.11.3",
     "del": "^1.2.0",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.1",
@@ -41,6 +42,7 @@
     "gulp-util": "^3.0.5",
     "jshint-stylish": "^2.0.0",
     "mocha": "^2.2.5",
+    "mocha-lcov-reporter": "0.0.2",
     "node-mongo-seeds": "^2.2.4",
     "prompt": "^0.2.14",
     "require-dir": "^0.3.0",
