Adds rudimentary migrations.

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "migrate": "^0.2.2",
     "mocha": "^2.2.5",
     "mocha-lcov-reporter": "0.0.2",
-    "mongoose-migration": "^0.1.0",
+    "mongodb": "^2.0.39",
+    "monk": "^1.0.1",
     "node-mongo-seeds": "^2.2.4",
     "prompt": "^0.2.14",
     "require-dir": "^0.3.0",
