--- a/bower.json
+++ b/bower.json
@@ -13,17 +13,17 @@
   ],
   "dependencies": {
     "angular-bootstrap": "~0.13.0",
-    "angular": "~1.3.15",
-    "angular-route": "~1.4.0",
     "bootstrap": "~3.3.4",
-    "angular-animate": "~1.3.15",
     "font-awesome": "~4.3.0",
     "angular-ui-router": "~0.2.15",
     "toastr": "~2.1.1",
     "angular-toastr": "~1.4.1",
     "angular-resource": "~1.4.1",
     "modernizr": "~2.8.3",
-    "textAngular": "~1.4.2"
+    "textAngular": "~1.4.2",
+    "angular-route": "1.4.3",
+    "angular": "1.4.3",
+    "angular-animate": "1.4.3"
   },
   "overrides": {
     "bootstrap": {
