--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,9 @@
     "textAngular": "~1.4.2",
     "angular-route": "1.4.3",
     "angular": "1.4.3",
-    "angular-animate": "1.4.3"
+    "angular-animate": "1.4.3",
+    "angular-file-saver": "~0.2.0",
+    "file-saver": "*"
   },
   "overrides": {
     "bootstrap": {
