Redesign of reminders to support html -> PDF; Save as PDF first pass

--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "angular": "1.4.3",
     "angular-animate": "1.4.3",
     "angular-file-saver": "~0.2.0",
-    "file-saver": "*"
+    "file-saver": "*",
+    "jspdf": "~1.1.135"
   },
   "overrides": {
     "bootstrap": {
