--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "type": "git",
     "url": "git://github.com/yadaguru/yadaguru-app.git"
   },
-  "main": "./server/server.js",
+  "main": "index.html",
   "scripts": {
-    "test": "mocha-phantomjs ./test/browser/index.html",
-    "start": "node ./server/server.js"
+    "test": "mocha-phantomjs ./test/browser/index.html"
   },
   "author": "",
   "license": "GPL-2.0",
@@ -22,6 +21,7 @@
     "gulp-jshint": "^1.11.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.3",
+    "gulp-ng-constant": "^1.1.0",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
@@ -30,5 +30,6 @@
     "vinyl-paths": "^1.0.0",
     "yargs": "^3.10.0"
   },
-  "dependencies": {}
+  "dependencies": {
+  }
 }
