--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "pdfmake": "~0.1.20",
     "textAngular": "~1.4.2",
     "toastr": "~2.1.1",
-    "requirejs": "~2.1.20"
+    "requirejs": "~2.1.20",
+    "angular-bootstrap-switch": "~0.4.1"
   },
   "overrides": {
     "bootstrap": {
