--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "textAngular": "~1.4.2",
     "toastr": "~2.1.1",
     "requirejs": "~2.1.20",
-    "angular-bootstrap-switch": "~0.4.1"
+    "angular-bootstrap-switch": "~0.4.1",
+    "angular-touch": "~1.4.8"
   },
   "overrides": {
     "bootstrap": {
