Completes onboarding steps. Animations still need to be added

--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,10 @@
     "toastr": "~2.1.1",
     "requirejs": "~2.1.20",
     "angular-bootstrap-switch": "~0.4.1",
-    "angular-touch": "~1.4.8"
+    "angular-touch": "~1.4.8",
+    "angular-momentjs": "~0.2.2",
+    "angular-tour": "~0.2.5",
+    "jquery": "~2.1.4"
   },
   "overrides": {
     "bootstrap": {
