--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "angular-tour": "~0.2.5",
     "jquery": "~2.1.4",
     "angular-cookies": "~1.4.8",
-    "ngstorage": "~0.3.10"
+    "ngstorage": "~0.3.10",
+    "angular-ui-mask": "~1.6.6"
   },
   "overrides": {
     "bootstrap": {
