--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "GPL-2.0",
   "devDependencies": {
+    "bower": "^1.7.7",
     "browser-sync": "^2.9.11",
     "del": "^1.2.0",
     "gulp": "^3.8.11",
