--- a/bower.json
+++ b/bower.json
@@ -46,5 +46,9 @@
   },
   "devDependencies": {
     "angular-mocks": "1.4.5"
+  },
+  "resolutions": {
+    "angular": "~1.4.6",
+    "jquery": ">= 1.9.1"
   }
 }
