--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-changed": "^1.3.2",
+    "gulp-debug": "^3.1.0",
     "gulp-jshint": "^1.11.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.3",
     "gulp-ng-constant": "^1.1.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-rev": "^7.1.2",
+    "gulp-rev-replace": "^0.4.3",
     "gulp-sass": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-webpack": "^1.5.0",
     "jshint-stylish": "^2.0.0",
     "run-sequence": "^1.1.0",
     "vinyl-paths": "^1.0.0",
