--- a/bower.json
+++ b/bower.json
@@ -37,7 +37,8 @@
     "angular-cookies": "1.4.8",
     "ngstorage": "0.3.10",
     "angular-ui-mask": "1.6.6",
-    "angular-local-storage": "~0.5.2"
+    "angular-local-storage": "0.5.2",
+    "jsnlog": "2.22.1"
   },
   "overrides": {
     "bootstrap": {
