--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-changed": "^1.3.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-debug": "^3.1.0",
     "gulp-jshint": "^1.11.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.3",
     "gulp-ng-constant": "^1.1.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-rev-all": "^0.9.7",
     "gulp-sass": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
     "jshint-stylish": "^2.0.0",
