--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "author": "",
   "license": "GPL-2.0",
-  "devDependencies": {
+  "dependencies": {
     "bower": "^1.7.7",
     "browser-sync": "^2.9.11",
     "del": "^1.2.0",
@@ -21,6 +21,7 @@
     "gulp-changed": "^1.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^3.1.0",
+    "gulp-if": "^2.0.2",
     "gulp-jshint": "^1.11.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.3",
@@ -29,12 +30,11 @@
     "gulp-rev-all": "^0.9.7",
     "gulp-sass": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^2.1.2",
     "jshint-stylish": "^2.0.0",
+    "require-dir": "^0.3.0",
     "run-sequence": "^1.1.0",
     "vinyl-paths": "^1.0.0",
     "yargs": "^3.10.0"
-  },
-  "dependencies": {
-    "require-dir": "^0.3.0"
   }
 }
